add more docs, fix small problems
